<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.2.6.RELEASE</version>
		<relativePath /> <!-- lookup parent from repository -->
	</parent>
	<groupId>com._4point.aem</groupId>
	<artifactId>formsfeeder.pf4j-spring</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>FormsFeeder PF4J/Spring Interface</name>
	<description>Based on the pf4j-spring project, this version is customized for the FormsFeeder project.</description>
	
	<!--
	In order to build this project, you just need to use the standard build procedure.  One of the two following options:
	install
	clean install
	
	I'm finding that this project is small enough that a clean install is still fast enough that I mostly use it. 
	 -->
	<properties>
		<java.version>11</java.version>
		<pf4j.version>3.3.1</pf4j.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-jersey</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>junit-addons</groupId>
			<artifactId>junit-addons</artifactId>
			<version>1.4</version>
			<scope>test</scope>
			<exclusions>
				<exclusion>	<!-- Exclude this really old version of junit that junit-addons depends on -->
					<groupId>junit</groupId>
					<artifactId>junit</artifactId>
				</exclusion>
				<exclusion>	<!-- Exclude this really old version of xerces that junit-addons depends 
						on -->
					<groupId>xerces</groupId>
					<artifactId>xercesImpl</artifactId>
				</exclusion>
				<exclusion>	<!-- Exclude this really old version of xerces that junit-addons depends 
						on -->
					<groupId>xerces</groupId>
					<artifactId>xmlParserAPIs</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.pf4j</groupId>
			<artifactId>pf4j</artifactId>
			<version>${pf4j.version}</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/javax.annotation/javax.annotation-api -->
		<dependency>
			<groupId>javax.annotation</groupId>
			<artifactId>javax.annotation-api</artifactId>
		</dependency>
	</dependencies>


</project>